이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="reserve">
                         <a href="#">
                             <figure>
-                                <img src="img/icon/free-icon-notes-622195.png" alt="">
+                                <img src="img/icon/notes.png" alt="">
                                 <p>방문 신청</p>
                             </figure>
                         </a>
@@ -162,7 +162,7 @@
                     <div class="eventInfo">
                         <a href="#">
                             <figure>
-                                <img src="img/icon/free-icon-calendar-2098602.png" alt="">
+                                <img src="img/icon/calendar.png" alt="">
                                 <p>행사 정보</p>
                             </figure>
                         </a>
